# agenthalt

./: .gitignore  LICENSE  README.md  llm.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: agenthalt.yaml  decorator_example.py  live_demo.py  quickstart.py  yaml_config_example.py
src/agenthalt/: __init__.py  __main__.py  config.py  decorators.py
src/agenthalt/audit/: logger.py
src/agenthalt/core/: context.py  decision.py  engine.py  guard.py  policy.py
src/agenthalt/dashboard/: __main__.py  server.py
src/agenthalt/dashboard/templates/: dashboard.html
src/agenthalt/guards/: budget.py  deletion.py  purchase.py  rate_limit.py  scope.py  sensitive_data.py
src/agenthalt/hil/: approval.py
src/agenthalt/integrations/: openai_adapter.py
src/agenthalt/state/: backend.py
tests/: test_budget_guard.py  test_config.py  test_deletion_guard.py  test_engine.py  test_purchase_guard.py  test_rate_limit_guard.py  test_scope_guard.py  test_sensitive_data_guard.py
